src/test/deca/context/invalid/created/exemple_doc.deca
//Description
//    Vérifier l'exemple p91-92 de la doc
//
//Résultats :
//  Erreur
//

class A {
    protected int x = 2;
}

class B extends A {

    int getX(A a) {
        return a.x;
    }
}

class X {

    void m() {
        A a = new A();
        B b = new B();
        println(b.getX(a));
    }
}

{
    X x = new X();
    x.m();
}